<?xml version="1.0"?>
<package>
  <name>pi_robot</name>
  <version>0.0.0</version>
  <description>The pi_robot package</description>
  <maintainer email="matejbart@gmail.com">Matej Bartosovic</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pi_robot_driver</run_depend>
  <run_depend>pi_robot_description</run_depend>

  <export>
  </export>

</package>
