<?xml version="1.0"?>
<package>
  <name>pi_robot_description</name>
  <version>0.0.0</version>
  <description>The pi_robot_description package</description>

  <maintainer email="matejbart@gmail.com">Matej Bartosovic</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
