<?xml version="1.0"?>
<package>
  <name>pi_robot_driver</name>
  <version>0.0.0</version>
  <description>The pi_robot_driver package</description>

  <maintainer email="matejbart@gmail.com">Matej Bartosovic</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>pi_robot_description</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>pi_robot_description</run_depend>





  <export>

  </export>
</package>
